cve_pipeline/integration_log.txt
============================= test session starts =============================
platform win32 -- Python 3.12.4, pytest-8.4.2, pluggy-1.6.0 -- C:\Users\ttapk\AppData\Local\Programs\Python\Python312\python.exe
cachedir: .pytest_cache
benchmark: 5.1.0 (defaults: timer=time.perf_counter disable_gc=False min_rounds=5 min_time=0.000005 max_time=1.0 calibration_precision=10 warmup=False warmup_iterations=100000)
rootdir: C:\Users\ttapk\PycharmProjects\pythonProject\CVE\cve_pipeline
configfile: pytest.ini
plugins: anyio-4.12.1, langsmith-0.6.3, asyncio-1.2.0, benchmark-5.1.0, cov-4.1.0, flask-1.3.0, mock-3.14.1, profiling-1.8.1
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 4 items

tests/test_integration.py::TestPipelineIntegration::test_dry_run_pipeline FAILED [ 25%]
tests/test_integration.py::TestPipelineIntegration::test_router_integration FAILED [ 50%]
tests/test_integration.py::TestSecurityIntegration::test_scope_enforcement_in_pipeline PASSED [ 75%]
tests/test_integration.py::TestSecurityIntegration::test_command_injection_prevention FAILED [100%]

================================== FAILURES ===================================
________________ TestPipelineIntegration.test_dry_run_pipeline ________________
tests\test_integration.py:33: in test_dry_run_pipeline
    from core.orchestrator import Orchestrator
core\__init__.py:3: in <module>
    from .state_manager import state_manager
E     File "C:\Users\ttapk\PycharmProjects\pythonProject\CVE\cve_pipeline\core\state_manager.py", line 76
E       """Adds a new target if it doesn't exist."""
E                                       ^
E   SyntaxError: unterminated string literal (detected at line 76)
_______________ TestPipelineIntegration.test_router_integration _______________
tests\test_integration.py:47: in test_router_integration
    from modules.router import Router, TargetType
modules\router.py:13: in <module>
    from core.state_manager import state_manager
core\__init__.py:3: in <module>
    from .state_manager import state_manager
E     File "C:\Users\ttapk\PycharmProjects\pythonProject\CVE\cve_pipeline\core\state_manager.py", line 76
E       """Adds a new target if it doesn't exist."""
E                                       ^
E   SyntaxError: unterminated string literal (detected at line 76)
__________ TestSecurityIntegration.test_command_injection_prevention __________
tests\test_integration.py:113: in test_command_injection_prevention
    assert ";" not in result or result is None
           ^^^^^^^^^^^^^^^^^
E   TypeError: argument of type 'NoneType' is not iterable
------------------------------ Captured log call ------------------------------
WARNING  HunterLoop:validator.py:130 [Security] Dangerous character detected: ';'
=========================== short test summary info ===========================
FAILED tests/test_integration.py::TestPipelineIntegration::test_dry_run_pipeline
FAILED tests/test_integration.py::TestPipelineIntegration::test_router_integration
FAILED tests/test_integration.py::TestSecurityIntegration::test_command_injection_prevention
========================= 3 failed, 1 passed in 0.40s =========================
